--- a/Pages/Shopping.html
+++ b/Pages/Shopping.html
@@ -102,7 +102,7 @@
 	//-->
 	</script>
 	
-	<link rel="shortcut icon" href="../images/icons/shopping.ico">
+	<link rel="shortcut icon" href="../Images/icons/shopping.ico">
 	<title>Shopping</title>
 </head>
 
@@ -112,10 +112,10 @@
 <br /><br /><br /><br /><br /><br /><br />
 
 <div class="center">
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="Arrow"></a>
-	<a href="http://www.amazon.com/?_encoding=UTF8"><img width="150" height="150" src="../images/amazon.png" alt="Amazon"></a>
-	<a href="http://www.ebay.com"><img width="150" height="150" src="../images/ebay.png" alt="ebay"></a>
-	<a href="http://www.bestbuy.com"><img width="150" height="150" src="../images/bestbuy.png" alt="Bestbuy"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="Arrow"></a>
+	<a href="https://t.co/vI4P55M0qg"><img width="150" height="150" src="../Images/Amazon.png" alt="Amazon"></a>
+	<a href="http://www.ebay.com"><img width="150" height="150" src="../Images/Ebay.png" alt="ebay"></a>
+	<a href="http://www.bestbuy.com"><img width="150" height="150" src="../Images/Bestbuy.png" alt="Bestbuy"></a>
 </div>
 
 </body>
