--- a/Pages/Stuff.html
+++ b/Pages/Stuff.html
@@ -94,14 +94,12 @@
 			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Night-CSS.css">');
 		else
 			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Day-CSS.css">');
-			
-		document.write('<link rel="stylesheet" type="text/css" href="CSS/Pages-Night-CSS.css">');
 	
 	
 	//-->
 	</script>
 	
-	<link rel="shortcut icon" href="../images/icons/social.ico">
+	<link rel="shortcut icon" href="../Images/icons/social.ico">
 	<title>Social</title>
 </head>
 
@@ -113,13 +111,13 @@
 <div class="center">
 	</br>
 	</br>
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="arrow"></a>
-	<a href="http://www.facebook.com"><img width="150" height="150" src="../images/facebook.png" alt="facebook"></a>
-	<a href="http://www.tumblr.com"><img width="150" height="150" src="../images/tumblr.png" alt="tumblr"></a>
-	<a href="http://www.youtube.com"><img width="147" height="147" src="../images/youtube.png" alt="youtube"></a>
-	<a href="http://www.reddit.com"><img width="147" height="147" src="../images/reddit.png" alt="reddit"></a>
-	<a href="http://www.twitter.com"><img width="150" height="150" src="../images/twitter.png" alt="twitter"></a>
-	<a href="http://www.instagram.com"><img width="150" height="150" src="../images/instagram.png" alt="instagram"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
+	<a href="http://www.facebook.com"><img width="150" height="150" src="../Images/Facebook.png" alt="facebook"></a>
+	<a href="http://www.tumblr.com"><img width="150" height="150" src="../Images/Tumblr.png" alt="tumblr"></a>
+	<a href="http://www.youtube.com"><img width="147" height="147" src="../Images/Youtube.png" alt="youtube"></a>
+	<a href="http://www.reddit.com"><img width="147" height="147" src="../Images/Reddit.png" alt="reddit"></a>
+	<a href="http://www.twitter.com"><img width="150" height="150" src="../Images/Twitter.png" alt="twitter"></a>
+	<a href="http://www.instagram.com"><img width="150" height="150" src="../Images/Instagram.png" alt="instagram"></a>
 	
 </div>
 
