--- a/Pages/Everything Else.html
+++ b/Pages/Everything Else.html
@@ -102,14 +102,14 @@
 	//-->
 	</script>
 	
-	<link rel="shortcut icon" href="../images/icons/blocks.ico">
+	<link rel="shortcut icon" href="../Images/Icons/Blocks.ico">
 	<title>Everything Else</title>
 </head>
 
 <body>
 
 <div class="center">
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="arrow"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
 	<br />
 	<a href="http://stackoverflow.com/" Class="stackoverflow">Stack Overflow</a>
     <br />
@@ -164,7 +164,7 @@
 	<br />
 	<a href="http://www.howardbeach.com/" Class="howardbeach">Howard Beach</a>
 	<br />
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="arrow"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
 	
 </div>
 
