--- a/Pages/School Stuff.html
+++ b/Pages/School Stuff.html
@@ -95,37 +95,35 @@
 			document.write('<link rel="stylesheet" type="text/css" href="../CSS/School%20Stuff%20Night.css">');
 		else
 			document.write('<link rel="stylesheet" type="text/css" href="../CSS/School%20Stuff%20Day.css">');
-			
-		document.write('<link rel="stylesheet" type="text/css" href="CSS/Pages-Night-CSS.css">');
 	
 	
 	//-->
 	</script>
 	
-	<link rel="shortcut icon" href="../images/icons/school.ico">
+	<link rel="shortcut icon" href="../Images/icons/school.ico">
 	<title>School Stuff</title>
 </head>
 
 <body>
 
 <div class="center">
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="arrow"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
 	<br />
     
     <div class="c">
     <table>
         <tr>
             <td>
-                <a href="School%20pages/Fall%202012.html" title="Stuff"><img width="180" height="180" src="../images/Books.png" alt="Stuff"></a>
+                <a href="School%20pages/Fall%202012.html" title="Stuff"><img width="180" height="180" src="../Images/Books.png" alt="Stuff"></a>
             </td>
             <td>
-                <a href="School%20pages/Spring%202013.html" title="Stuff"><img width="180" height="180" src="../images/Books.png" alt="Stuff"></a>
+                <a href="School%20pages/Spring%202013.html" title="Stuff"><img width="180" height="180" src="../Images/Books.png" alt="Stuff"></a>
             </td>
             <td>
-                <a href="school%20pages/Fall%202013.html" title="Stuff"><img width="180" height="180" src="../images/Books.png" alt="Stuff"></a>
+                <a href="school%20pages/Fall%202013.html" title="Stuff"><img width="180" height="180" src="../Images/Books.png" alt="Stuff"></a>
             </td>
             <td>
-                <a href="school%20pages/Spring%202014.html" title="Stuff"><img width="180" height="180" src="../images/Books.png" alt="Stuff"></a>
+                <a href="school%20pages/Spring%202014.html" title="Stuff"><img width="180" height="180" src="../Images/Books.png" alt="Stuff"></a>
             </td>
         </tr>
         <tr>
@@ -157,7 +155,7 @@
     <a href="school%20pages/All%20Semesters.html">All Semesters</a>
     </div>
     <br/>
-	<a href="../homepage.html"><img width="150" height="150" src="../images/arrow.png" alt="arrow"></a>
+	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
 </div>
 
 
