Fixed ebay icon name

--- a/Pages/Shopping.html
+++ b/Pages/Shopping.html
@@ -114,7 +114,7 @@
 <div class="center">
 	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="Arrow"></a>
 	<a href="https://t.co/vI4P55M0qg"><img width="150" height="150" src="../Images/Amazon-Icon.png" alt="Amazon"></a>
-	<a href="http://www.ebay.com"><img width="150" height="150" src="../Images/Ebay.png" alt="ebay"></a>
+	<a href="http://www.ebay.com"><img width="150" height="150" src="../Images/Ebay-Icon.png" alt="ebay"></a>
 	<a href="http://www.bestbuy.com"><img width="150" height="150" src="../Images/Bestbuy.png" alt="Bestbuy"></a>
 </div>
 
