Changed wallpapers and Icons
Removed some links from the "Everything Else" page

--- a/Pages/School Stuff.html
+++ b/Pages/School Stuff.html
@@ -4,102 +4,7 @@
 
 <head>
 	<meta charset = "utf-8">
-	
-	<script type="text/javascript">
-	<!--
-		var currentTime = new Date();
-		var hours = currentTime.getHours() + 1;
-		var date = currentTime.getDate();
-		var month = currentTime.getMonth() + 1;
-		var sunrise;
-		var sunset;
-		
-		if (month == 1)
-		{
-			sunrise = 7;
-			sunset = 17;
-		}
-		else if (month == 2)
-		{
-			sunrise = 6;
-			sunset = 17;
-		}
-		else if (month == 3)
-		{
-			if (date > 14)
-			{
-				sunrise = 7;
-				sunset = 19;
-			}
-			else
-			{
-				sunrise = 6;
-				sunset = 18;
-			}
-		}
-		else if (month == 4)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 5)
-		{
-			sunrise = 6;
-			sunset = 21;
-		}
-		else if (month == 6)
-		{
-			sunrise = 5;
-			sunset = 21;
-		}
-		else if (month == 7)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 8)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 9)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 10)
-		{
-			sunrise = 7;
-			sunset = 18;
-		}
-		else if (month == 11)
-		{
-			if (date < 7)
-			{
-				sunrise = 7;
-				sunset = 18;
-			}
-			else
-			{
-				sunrise = 7;
-				sunset = 17;
-			}
-		}
-		else if (month == 12)
-		{
-			sunrise = 7;
-			sunset = 16;
-		}
-	
-		if ((hours >= 0 && hours <= sunrise) || (hours >= sunset && hours <= 23))
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/School%20Stuff%20Night.css">');
-		else
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/School%20Stuff%20Day.css">');
-	
-	
-	//-->
-	</script>
-	
+	<link rel="stylesheet" type="text/css" href="../CSS/Pages.css">	
 	<link rel="shortcut icon" href="../Images/icons/school.ico">
 	<title>School Stuff</title>
 </head>
