--- a/Pages/Stuff.html
+++ b/Pages/Stuff.html
@@ -1,126 +1,35 @@
 <!DOCTYPE html>
 
-	<!--Social-->
+<!--Social-->
 
 <head>
-	<meta charset = "utf-8">
-	<script type="text/javascript">
-	<!--
-		var currentTime = new Date();
-		var hours = currentTime.getHours() + 1;
-		var date = currentTime.getDate();
-		var month = currentTime.getMonth() + 1;
-		var sunrise;
-		var sunset;
-		
-		if (month == 1)
-		{
-			sunrise = 7;
-			sunset = 17;
-		}
-		else if (month == 2)
-		{
-			sunrise = 6;
-			sunset = 17;
-		}
-		else if (month == 3)
-		{
-			if (date > 14)
-			{
-				sunrise = 7;
-				sunset = 19;
-			}
-			else
-			{
-				sunrise = 6;
-				sunset = 18;
-			}
-		}
-		else if (month == 4)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 5)
-		{
-			sunrise = 6;
-			sunset = 21;
-		}
-		else if (month == 6)
-		{
-			sunrise = 5;
-			sunset = 21;
-		}
-		else if (month == 7)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 8)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 9)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 10)
-		{
-			sunrise = 7;
-			sunset = 18;
-		}
-		else if (month == 11)
-		{
-			if (date < 7)
-			{
-				sunrise = 7;
-				sunset = 18;
-			}
-			else
-			{
-				sunrise = 7;
-				sunset = 17;
-			}
-		}
-		else if (month == 12)
-		{
-			sunrise = 7;
-			sunset = 16;
-		}
-	
-		if ((hours >= 0 && hours <= sunrise) || (hours >= sunset && hours <= 23))
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Night-CSS.css">');
-		else
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Day-CSS.css">');
-	
-	
-	//-->
-	</script>
-	
-	<link rel="shortcut icon" href="../Images/icons/social.ico">
-	<title>Social</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../CSS/Pages.css">
+    <link rel="shortcut icon" href="../Images/icons/social.ico">
+    <title>Social</title>
 </head>
 
 <body>
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<br /><br /><br /><br />
-<!--Websites-->
-<div class="center">
-	</br>
-	</br>
-	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a>
-	<a href="http://www.facebook.com"><img width="150" height="150" src="../Images/Facebook.png" alt="facebook"></a>
-	<a href="http://www.tumblr.com"><img width="150" height="150" src="../Images/Tumblr.png" alt="tumblr"></a>
-	<a href="http://www.youtube.com"><img width="147" height="147" src="../Images/Youtube.png" alt="youtube"></a>
-	<a href="http://www.reddit.com"><img width="147" height="147" src="../Images/Reddit.png" alt="reddit"></a>
-	<a href="http://www.twitter.com"><img width="150" height="150" src="../Images/Twitter.png" alt="twitter"></a>
-	<a href="http://www.instagram.com"><img width="150" height="150" src="../Images/Instagram.png" alt="instagram"></a>
-	
-</div>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br />
+    <!--Websites-->
+    <div class="center">
+        </br>
+        </br>
+        <table class="tableformat">
+            <tr>
+                <td><a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="arrow"></a></td>
+                <td><a href="http://www.facebook.com"><img width="120" height="120" src="../Images/Facebook.png" alt="youtube"></a></td>
+                <td><a href="http://www.tiktok.com"><img width="120" height="120" src="../Images/Tiktok.png" alt="youtube"></a></td>
+                <td><a href="http://www.tumblr.com"><img width="120" height="120" src="../Images/Tumblr.png" alt="youtube"></a></td>
+                <td><a href="http://www.youtube.com"><img width="120" height="120" src="../Images/Youtube.png" alt="youtube"></a></td>
+                <td><a href="http://www.reddit.com"><img width="130" height="130" src="../Images/Reddit.png" alt="youtube"></a></td>
+                <td><a href="http://www.twitter.com"><img width="130" height="130" src="../Images/Twitter.png" alt="youtube"></a></td>
+                <td><a href="http://www.instagram.com"><img width="120" height="120" src="../Images/Instagram.png" alt="youtube"></a></td>
+            </tr>
+        </table>
+
+    </div>
 
 </body>
-
-</html>	
