--- a/Pages/Shopping.html
+++ b/Pages/Shopping.html
@@ -1,122 +1,30 @@
 <!DOCTYPE html>
 
-	<!--Shopping-->
+<!--Shopping-->
 
 <head>
-	<meta charset = "utf-8">
-	
-	<script type="text/javascript">
-	<!--
-		var currentTime = new Date();
-		var hours = currentTime.getHours() + 1;
-		var date = currentTime.getDate();
-		var month = currentTime.getMonth() + 1;
-		var sunrise;
-		var sunset;
-		
-		if (month == 1)
-		{
-			sunrise = 7;
-			sunset = 17;
-		}
-		else if (month == 2)
-		{
-			sunrise = 6;
-			sunset = 17;
-		}
-		else if (month == 3)
-		{
-			if (date > 14)
-			{
-				sunrise = 7;
-				sunset = 19;
-			}
-			else
-			{
-				sunrise = 6;
-				sunset = 18;
-			}
-		}
-		else if (month == 4)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 5)
-		{
-			sunrise = 6;
-			sunset = 21;
-		}
-		else if (month == 6)
-		{
-			sunrise = 5;
-			sunset = 21;
-		}
-		else if (month == 7)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 8)
-		{
-			sunrise = 6;
-			sunset = 20;
-		}
-		else if (month == 9)
-		{
-			sunrise = 6;
-			sunset = 19;
-		}
-		else if (month == 10)
-		{
-			sunrise = 7;
-			sunset = 18;
-		}
-		else if (month == 11)
-		{
-			if (date < 7)
-			{
-				sunrise = 7;
-				sunset = 18;
-			}
-			else
-			{
-				sunrise = 7;
-				sunset = 17;
-			}
-		}
-		else if (month == 12)
-		{
-			sunrise = 7;
-			sunset = 16;
-		}
-	
-		if ((hours >= 0 && hours <= sunrise) || (hours >= sunset && hours <= 23))
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Night-CSS.css">');
-		else
-			document.write('<link rel="stylesheet" type="text/css" href="../CSS/Pages-Day-CSS.css">');
-			
-		document.write('<link rel="stylesheet" type="text/css" href="CSS/Pages-Night-CSS.css">');
-	
-	
-	//-->
-	</script>
-	
-	<link rel="shortcut icon" href="../Images/icons/shopping.ico">
-	<title>Shopping</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../CSS/Pages.css">
+    <link rel="shortcut icon" href="../Images/icons/shopping.ico">
+    <title>Shopping</title>
 </head>
 
 <body>
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br />
 
-<div class="center">
-	<a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="Arrow"></a>
-	<a href="https://t.co/vI4P55M0qg"><img width="150" height="150" src="../Images/Amazon-Icon.png" alt="Amazon"></a>
-	<a href="http://www.ebay.com"><img width="150" height="150" src="../Images/Ebay-Icon.png" alt="ebay"></a>
-	<a href="http://www.bestbuy.com"><img width="150" height="150" src="../Images/Bestbuy.png" alt="Bestbuy"></a>
-</div>
+    <div class="center">
+        <table class="tableformat">
+            <tr>
+                <td><a href="../index.html"><img width="150" height="150" src="../Images/Arrow.png" alt="Arrow"></a></td>
+                <td><a href="https://t.co/vI4P55M0qg"><img width="150" height="150" src="../Images/Amazon.png" alt="Amazon"></a></td>
+                <td><a href="http://www.newegg.com"><img width="150" height="150" src="../Images/Newegg.png" alt="Newegg"></a></td>
+                <td><a href="http://www.ebay.com"><img width="150" height="150" src="../Images/Ebay.png" alt="Ebay"></a></td>
+                <td><a href="http://www.bestbuy.com"><img width="150" height="150" src="../Images/Bestbuy.svg" alt="Bestbuy"></a></td>
+            </tr>
+        </table>
+    </div>
 
 </body>
 
